--- a/src/.samples/Soap.Client/Soap.Client.csproj
+++ b/src/.samples/Soap.Client/Soap.Client.csproj
@@ -1,16 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="System.ServiceModel.Http" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Sample1\Sample1.csproj" />
+    <ProjectReference Include="..\Soap.Server\Soap.Server.csproj" />
   </ItemGroup>
 
 </Project>
