--- a/src/.samples/WsTrust.Sts.Sample/WsTrust.Sts.Sample.csproj
+++ b/src/.samples/WsTrust.Sts.Sample/WsTrust.Sts.Sample.csproj
@@ -1,11 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-  </PropertyGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Solid.Identity.Protocols.WsTrust\Solid.Identity.Protocols.WsTrust.csproj" />
+    <ProjectReference Include="..\..\Protocols\WsTrust\WsTrust.csproj" />
   </ItemGroup>
-
 </Project>
