--- a/src/IdentityModel/Xml/Xml.csproj
+++ b/src/IdentityModel/Xml/Xml.csproj
@@ -3,28 +3,10 @@
   <PropertyGroup>
     <RootNamespace>Solid.IdentityModel</RootNamespace>
   </PropertyGroup>
-
+  
   <ItemGroup>
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="8.7.0" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.*" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) == 'net6.0'">
-    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="6.36.0" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.*" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) == 'net8.0'">
-    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="8.7.0" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="8.0.*" />
-  </ItemGroup>
-
-  <ItemGroup Condition="$(TargetFramework) == 'net9.0'">
-    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="8.7.0" />
-    <PackageReference Include="System.Security.Cryptography.Xml" Version="9.0.*" />
+    <PackageReference Include="Microsoft.IdentityModel.Xml" Version="$(MicrosoftIdentityModelVersion)" />
+    <PackageReference Include="System.Security.Cryptography.Xml" Version="$(MicrosoftExtensionsVersion)" />
   </ItemGroup>
 
   <ItemGroup>
