--- a/src/Utility/Testing.AspNetCore.Extensions.XUnit.Soap/Testing.AspNetCore.Extensions.XUnit.Soap.csproj
+++ b/src/Utility/Testing.AspNetCore.Extensions.XUnit.Soap/Testing.AspNetCore.Extensions.XUnit.Soap.csproj
@@ -1,19 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-<!--  <PropertyGroup>-->
-<!--    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>-->
-<!--    <LangVersion>8.0</LangVersion>-->
-<!--    <Authors>SOLID Softworks</Authors>-->
-<!--    <Copyright>© SOLID Softworks. All rights reserved.</Copyright>-->
-<!--    <OutputTypeEx>library</OutputTypeEx>-->
-<!--    <PackageProjectUrl>https://github.com/SOLIDSoftworks/Solid.Extensions.AspNetCore.Soap</PackageProjectUrl>-->
-<!--    <PackageLicenseExpression>MIT</PackageLicenseExpression>-->
-<!--    <RepositoryUrl>https://github.com/SOLIDSoftworks/Solid.Extensions.AspNetCore.Soap</RepositoryUrl>-->
-<!--  </PropertyGroup>-->
 
   <ItemGroup>
     <PackageReference Include="Solid.Testing.AspNetCore.Extensions.XUnit" Version="3.0.14-beta" />
-    <PackageReference Include="System.ServiceModel.Http" Version="4.7.0" />
-    <PackageReference Include="System.ServiceModel.Security" Version="4.7.0" />
+    <PackageReference Include="System.ServiceModel.Http" Version="8.1.*" />
+    <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
   </ItemGroup>
 
 </Project>
