--- a/src/.tests/Directory.Build.props
+++ b/src/.tests/Directory.Build.props
@@ -6,6 +6,9 @@
     </PropertyGroup>
     <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
     <ItemGroup>
+        <ProjectReference Include="../../Utility/Testing.Shims.Moq/Testing.Shims.Moq.csproj" />
+    </ItemGroup>    
+    <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
         <PackageReference Include="xunit" Version="2.5.3" />
         <PackageReference Include="Xunit.DependencyInjection.Logging" Version="2.1.0" />
