--- a/src/.tests/Protocols.Sam2p.Tests/Identity.Protocols.Sam2p.Tests.csproj
+++ b/src/.tests/Protocols.Sam2p.Tests/Identity.Protocols.Sam2p.Tests.csproj
@@ -1,22 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="Moq" Version="4.14.5" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <ProjectReference Include="..\..\Protocols\Saml2p\Saml2p.csproj" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\Solid.Identity.Protocols.Saml2p\Solid.Identity.Protocols.Saml2p.csproj" />
+    <PackageReference Include="AwesomeAssertions" Version="8.1.0" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="$(MicrosoftExtensionsVersion)" />
+  </ItemGroup>
 </Project>
