--- a/src/IdentityModel/Protocols.WsTrust/Protocols.WsTrust.csproj
+++ b/src/IdentityModel/Protocols.WsTrust/Protocols.WsTrust.csproj
@@ -1,20 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <ItemGroup Condition="$(TargetFramework) == 'net6.0'">
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.36.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="6.36.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Xml" Version="6.36.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(TargetFramework) == 'net8.0'">
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.7.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="8.7.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Xml" Version="8.7.0" />
-    </ItemGroup>
-
-    <ItemGroup Condition="$(TargetFramework) == 'net9.0'">
-        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.7.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="8.7.0" />
-        <PackageReference Include="Microsoft.IdentityModel.Xml" Version="8.7.0" />
+    <ItemGroup>
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="$(MicrosoftIdentityModelVersion)" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens.Saml" Version="$(MicrosoftIdentityModelVersion)" />
+        <PackageReference Include="Microsoft.IdentityModel.Xml" Version="$(MicrosoftIdentityModelVersion)" />
     </ItemGroup>
 </Project>
