--- a/src/Protocols/Saml2p/Saml2p.csproj
+++ b/src/Protocols/Saml2p/Saml2p.csproj
@@ -12,6 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Solid.IdentityModel.Tokens.Saml" Version="1.0.6" />
+    <ProjectReference Include="..\..\IdentityModel\Tokens.Saml\Tokens.Saml.csproj" />
   </ItemGroup>
 </Project>
