--- a/src/Protocols/WsTrust/WsTrust.csproj
+++ b/src/Protocols/WsTrust/WsTrust.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
   
   <ItemGroup>    
-    <PackageReference Include="System.ServiceModel.Security" Version="4.7.0" />
+    <PackageReference Include="System.ServiceModel.Security" Version="6.0.*" />
   </ItemGroup>
   
   <ItemGroup>
