--- a/src/.tests/Directory.Build.props
+++ b/src/.tests/Directory.Build.props
@@ -3,6 +3,8 @@
         <AssemblyName Condition="$(AssemblyName) == ''">Solid.$(MSBuildProjectName)</AssemblyName>
         <RootNamespace Condition="$(RootNamespace) == ''">$(AssemblyName)</RootNamespace>
         <IsPublishable>false</IsPublishable>
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
     </PropertyGroup>
     <Import Project="$([MSBuild]::GetPathOfFileAbove('Directory.Build.props', '$(MSBuildThisFileDirectory)../'))" />
     <ItemGroup>
