--- a/src/Utility/Testing.Certificates/Testing.Certificates.csproj
+++ b/src/Utility/Testing.Certificates/Testing.Certificates.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <IsPackable>false</IsPackable>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 </Project>
