refactors json extension for http

--- a/src/Http/Http.Json/Http.Json.csproj
+++ b/src/Http/Http.Json/Http.Json.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Http.Json.Core\Http.Json.Core.csproj" />
+    <ProjectReference Include="..\Http.Core\Http.Core.csproj" />
   </ItemGroup>
+  
 
 </Project>
