working on warnings

--- a/src/.tests/Protocols.WsTrust.Tests/Identity.Protocols.WsTrust.Tests.csproj
+++ b/src/.tests/Protocols.WsTrust.Tests/Identity.Protocols.WsTrust.Tests.csproj
@@ -3,5 +3,6 @@
     <ProjectReference Include="..\..\Protocols\WsTrust\WsTrust.csproj" />
     <ProjectReference Include="..\..\ServiceModel\Security.WsTrust\Security.WsTrust.csproj" />
     <ProjectReference Include="..\..\Utility\Testing.AspNetCore.Extensions.XUnit.Soap\Testing.AspNetCore.Extensions.XUnit.Soap.csproj" />
+    <ProjectReference Include="..\..\Utility\Testing.Certificates\Testing.Certificates.csproj" />
   </ItemGroup>
 </Project>
